<resources>
    <!-- MAPS API -->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">PUT THE KEY HERE</string>

    <!-- TEXT -->
    <string name="app_name">Covid19 Monitoring</string>
    <string name="title">COVID19</string>
    <string name="news">News</string>
    <string name="statistics">Statistics</string>
    <string name="maps">Maps</string>
    <string name="confirmed">Confirmed</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="daily_updates">Daily Updates</string>
    <string name="recovery_rate">Recovery Rate</string>
    <string name="fatality_rate">Fatality Rate</string>
    <string name="cases_reported">Cases Reported</string>
    <string name="data_source">Data source: https://covid19.mathdro.id/api</string>

    <!-- PREFIX -->
    <string name="prefix_confirmed">Confirmed: %s</string>
    <string name="prefix_recovered">Recovered: %s</string>
    <string name="prefix_deaths">Deaths: %s</string>
    <string name="prefix_daily_detail">%s Cases in China, %s in other locations</string>
    <string name="prefix_last_update">Last update %s</string>
</resources>
