<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_news"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_timeline_24"
        android:title="@string/news"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_statistics"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_bar_chart_24"
        android:title="@string/statistics"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_maps"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/maps"
        app:showAsAction="ifRoom" />
</menu>