<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.covid19.monitoring.services.Status" />

        <variable
            name="vm"
            type="com.covid19.monitoring.views.ui.news.NewsViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_black">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_black"
            app:elevation="0dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvGlobalData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_scrollFlags="scroll|enterAlways">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clConfirmed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light_black"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/tvConfirmed"
                        style="@style/roboto_15_medium_white"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@{vm.globalData.data.confirmedWithSeparator ?? ``}"
                        app:layout_constraintEnd_toEndOf="@id/tvConfirmedText"
                        app:layout_constraintStart_toStartOf="@id/tvConfirmedText"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="1000" />

                    <TextView
                        android:id="@+id/tvConfirmedText"
                        style="@style/roboto_16_medium_yellow"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="4dp"
                        android:text="@string/confirmed"
                        app:layout_constraintEnd_toStartOf="@id/tvRecoveredText"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvConfirmed" />

                    <TextView
                        android:id="@+id/tvRecovered"
                        style="@style/roboto_15_medium_white"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@{vm.globalData.data.recoveredWithSeparator ?? ``}"
                        app:layout_constraintEnd_toEndOf="@id/tvRecoveredText"
                        app:layout_constraintStart_toStartOf="@id/tvRecoveredText"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="1000" />

                    <TextView
                        android:id="@+id/tvRecoveredText"
                        style="@style/roboto_16_medium_green"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="4dp"
                        android:text="@string/recovered"
                        app:layout_constraintEnd_toStartOf="@id/tvDeathsText"
                        app:layout_constraintStart_toEndOf="@id/tvConfirmedText"
                        app:layout_constraintTop_toBottomOf="@id/tvRecovered" />

                    <TextView
                        android:id="@+id/tvDeaths"
                        style="@style/roboto_15_medium_white"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@{vm.globalData.data.deathsWithSeparator ?? ``}"
                        app:layout_constraintEnd_toEndOf="@id/tvDeathsText"
                        app:layout_constraintStart_toStartOf="@id/tvDeathsText"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="1000" />

                    <TextView
                        android:id="@+id/tvDeathsText"
                        style="@style/roboto_16_medium_orange"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="4dp"
                        android:text="@string/deaths"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tvRecoveredText"
                        app:layout_constraintTop_toBottomOf="@id/tvRecovered" />

                    <TextView
                        style="@style/roboto_10_medium_white_70"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/data_source"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvConfirmedText" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvDailyUpdatesText"
                style="@style/roboto_18_medium_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/daily_updates"
                app:layout_constraintTop_toBottomOf="@id/cvGlobalData" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDailyUpdates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDailyUpdatesText"
            tools:listitem="@layout/item_daily_updates">

        </androidx.recyclerview.widget.RecyclerView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
